--- a/package.json
+++ b/package.json
@@ -51,11 +51,17 @@
 		"typeorm": "0.3.20"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.5.0",
 		"@tsconfig/node21": "^21.0.3",
+		"@types/eslint__js": "^8.42.3",
 		"@types/figlet": "^1.5.8",
 		"@types/node": "^20.14.4",
+		"eslint": "^9.5.0",
+		"eslint-plugin-vitest": "^0.5.4",
+		"globals": "^15.6.0",
 		"rimraf": "^5.0.7",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"typescript-eslint": "^7.13.1"
 	}
 }
