Configuring DB access typeorm & pgpromise, fetchUserData function

--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
 		"lovely": "yarn build && node -r dotenv/config ./dist/index.js",
 		"start": "node --loader ts-node/esm src/index.ts",
 		"typeorm": "typeorm-ts-node-esm",
+    "migration:create": "yarn typeorm migration:create ./src/database/migrations/${name}",
+    "migration:run": "typeorm-ts-node-esm -d ./src/database/config/data-source.ts migration:run",
+    "migration:revert": "typeorm-ts-node-esm -d ./src/database/config/data-source.ts migration:revert",
+    "entity:create": " typeorm entity:create ./src/database/entities/${name}",
 		"docker:run": "docker compose -p lovelystay -f docker-compose.yml up",
 		"docker:build": "docker compose -p lovelystay -f docker-compose.yml up --build",
 		"docker:down": "docker compose down",
