--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
 		"commander": "^12.1.0",
 		"dotenv": "^16.4.5",
 		"figlet": "^1.7.0",
+		"got": "^14.4.1",
 		"pg": "^8.12.0",
 		"pg-promise": "^11.8.0",
 		"reflect-metadata": "^0.2.2",
 		"table": "^6.8.2",
+		"terminal-image": "^2.0.0",
 		"typeorm": "0.3.20"
 	},
 	"devDependencies": {
