--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"dotenv": "^16.4.5",
 		"figlet": "^1.7.0",
 		"got": "^14.4.1",
+		"html-escaper": "^3.0.3",
 		"pg": "^8.12.0",
 		"pg-promise": "^11.8.0",
 		"reflect-metadata": "^0.2.2",
@@ -65,6 +66,7 @@
 		"@tsconfig/node21": "^21.0.3",
 		"@types/eslint__js": "^8.42.3",
 		"@types/figlet": "^1.5.8",
+		"@types/html-escaper": "^3.0.2",
 		"@types/node": "^20.14.4",
 		"@vitest/ui": "^1.6.0",
 		"eslint": "^9.5.0",
