--- a/package.json
+++ b/package.json
@@ -1,81 +1,91 @@
 {
-	"name": "lovelystaycli",
-	"version": "0.0.1",
-	"private": true,
-	"description": "This is a project for a back-end position at Lovely Stay - https://www.lovelystay.com/pt, which have some rules inteded to be followed and used as guidelines.",
-	"main": "src/index.js",
-	"license": "ISC",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/fabriziodidthis/lovelystaycli.git"
-	},
-	"bin": {
-		"lovelystaycli": "./dist/src/index.js"
-	},
-	"keywords": [
-		"lovelystay",
-		"cli",
-		"github"
-	],
-	"author": {
-		"name": "Fabrizio Andre",
-		"email": "fabriziodidthis@gmail.com",
-		"url": "https://www.fabriziodidthis.com/"
-	},
-	"bugs": "https://github.com/fabriziodidthis/lovelystaycli/issues",
-	"homepage": "https://github.com/fabriziodidthis/lovelystaycli",
-	"type": "module",
-	"scripts": {
-		"build": "rimraf ./dist && npx tsc ",
-		"build:dev": "npx tsc -w",
-		"lovely": "yarn build && node -r dotenv/config ./dist/index.js",
-		"start": "node --loader ts-node/esm src/index.ts",
-		"typeorm": "typeorm-ts-node-esm",
-		"migration:create": "yarn typeorm migration:create ./src/database/migrations/${name}",
-		"migration:run": "typeorm-ts-node-esm -d ./src/database/config/data-source.ts migration:run",
-		"migration:revert": "typeorm-ts-node-esm -d ./src/database/config/data-source.ts migration:revert",
-		"entity:create": " typeorm entity:create ./src/database/entities/${name}",
-		"docker:run": "docker compose -p lovelystay -f docker-compose.yml up",
-		"docker:build": "docker compose -p lovelystay -f docker-compose.yml up --build",
-		"docker:down": "docker compose down",
-		"docker:stop": "docker compose stop",
-		"docker:start": "docker compose start",
-		"docker:del": "docker system prune --all --volumes --force",
-		"upgrade": "yarn upgrade-interactive --latest",
-		"clear": "rm -rf node_modules && rm -rf package-lock.json && rm -rf yarn.lock && yarn cache clean",
-		"test": "vitest --clearScreen --ui",
-		"coverage": "vitest run --coverage"
-	},
-	"dependencies": {
-		"@commander-js/extra-typings": "^12.1.0",
-		"class-validator": "^0.14.1",
-		"commander": "^12.1.0",
-		"dotenv": "^16.4.5",
-		"figlet": "^1.7.0",
-		"got": "^14.4.1",
-		"html-escaper": "^3.0.3",
-		"pg": "^8.12.0",
-		"pg-promise": "^11.8.0",
-		"reflect-metadata": "^0.2.2",
-		"table": "^6.8.2",
-		"terminal-image": "^2.0.0",
-		"typeorm": "0.3.20"
-	},
-	"devDependencies": {
-		"@eslint/js": "^9.5.0",
-		"@tsconfig/node21": "^21.0.3",
-		"@types/eslint__js": "^8.42.3",
-		"@types/figlet": "^1.5.8",
-		"@types/html-escaper": "^3.0.2",
-		"@types/node": "^20.14.4",
-		"@vitest/ui": "^1.6.0",
-		"eslint": "^9.5.0",
-		"eslint-plugin-vitest": "^0.5.4",
-		"globals": "^15.6.0",
-		"rimraf": "^5.0.7",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.4.5",
-		"typescript-eslint": "^7.13.1",
-		"vitest": "^1.6.0"
-	}
+  "name": "lovelystaycli",
+  "version": "0.0.1",
+  "private": true,
+  "description": "This is a project for a back-end position at Lovely Stay - https://www.lovelystay.com/pt, which have some rules inteded to be followed and used as guidelines.",
+  "main": "src/index.js",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fabriziodidthis/lovelystaycli.git"
+  },
+  "bin": {
+    "lovelystaycli": "./dist/src/index.js"
+  },
+  "keywords": [
+    "lovelystay",
+    "cli",
+    "github"
+  ],
+  "author": {
+    "name": "Fabrizio Andre",
+    "email": "fabriziodidthis@gmail.com",
+    "url": "https://www.fabriziodidthis.com/"
+  },
+  "bugs": "https://github.com/fabriziodidthis/lovelystaycli/issues",
+  "homepage": "https://github.com/fabriziodidthis/lovelystaycli",
+  "type": "module",
+  "scripts": {
+    "build": "rimraf ./dist && npx tsc ",
+    "build:dev": "npx tsc -w",
+    "lovely": "yarn build && node -r dotenv/config ./dist/index.js",
+    "start": "node --loader ts-node/esm src/index.ts",
+    "typeorm": "typeorm-ts-node-esm",
+    "migration:create": "yarn typeorm migration:create ./src/database/migrations/${name}",
+    "migration:run": "typeorm-ts-node-esm -d ./src/database/config/data-source.ts migration:run",
+    "migration:revert": "typeorm-ts-node-esm -d ./src/database/config/data-source.ts migration:revert",
+    "entity:create": " typeorm entity:create ./src/database/entities/${name}",
+    "docker:run": "docker compose -p lovelystay -f docker-compose.yml up",
+    "docker:build": "docker compose -p lovelystay -f docker-compose.yml up --build",
+    "docker:down": "docker compose down",
+    "docker:stop": "docker compose stop",
+    "docker:start": "docker compose start",
+    "docker:del": "docker system prune --all --volumes --force",
+    "upgrade": "yarn upgrade-interactive --latest",
+    "clear": "rm -rf node_modules && rm -rf package-lock.json && rm -rf yarn.lock && yarn cache clean",
+    "test": "vitest --clearScreen --ui",
+    "coverage": "vitest run --coverage",
+    "prepare": "husky",
+    "postinstall": "husky || true"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown",
+    "*.ts": "eslint --cache --fix"
+  },
+  "dependencies": {
+    "@commander-js/extra-typings": "^12.1.0",
+    "class-validator": "^0.14.1",
+    "commander": "^12.1.0",
+    "dotenv": "^16.4.5",
+    "figlet": "^1.7.0",
+    "got": "^14.4.1",
+    "html-escaper": "^3.0.3",
+    "pg": "^8.12.0",
+    "pg-promise": "^11.8.0",
+    "reflect-metadata": "^0.2.2",
+    "table": "^6.8.2",
+    "terminal-image": "^2.0.0",
+    "typeorm": "0.3.20"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "@tsconfig/node21": "^21.0.3",
+    "@types/eslint__js": "^8.42.3",
+    "@types/figlet": "^1.5.8",
+    "@types/html-escaper": "^3.0.2",
+    "@types/node": "^20.14.4",
+    "@vitest/ui": "^1.6.0",
+    "eslint": "^9.5.0",
+    "eslint-plugin-vitest": "^0.5.4",
+    "globals": "^15.6.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
+    "prettier": "^3.3.2",
+    "prettier-eslint": "^16.3.0",
+    "rimraf": "^5.0.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.1",
+    "vitest": "^1.6.0"
+  }
 }
