--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "postinstall": "husky || true"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown",
-    "*.ts": "eslint --cache --fix"
+    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@commander-js/extra-typings": "^12.1.0",
@@ -63,7 +62,6 @@
     "pg": "^8.12.0",
     "pg-promise": "^11.8.0",
     "reflect-metadata": "^0.2.2",
-    "table": "^6.8.2",
     "terminal-image": "^2.0.0",
     "typeorm": "0.3.20"
   },
