Feat: flag to save user information as PDF file

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "build": "rimraf ./dist && npx tsc ",
     "build:dev": "npx tsc -w",
-    "lovely": "yarn build && node -r dotenv/config ./dist/index.js",
+    "lovely": "yarn build && copyfiles -u 2 ./src/assets/*.*  ./dist/utils/images && node -r dotenv/config ./dist/index.js",
     "start": "node --loader ts-node/esm src/index.ts",
     "typeorm": "typeorm-ts-node-esm",
     "migration:create": "yarn typeorm migration:create ./src/database/migrations/${name}",
@@ -56,10 +56,12 @@
     "@commander-js/extra-typings": "^12.1.0",
     "class-validator": "^0.14.1",
     "commander": "^12.1.0",
+    "copyfiles": "^2.4.1",
     "dotenv": "^16.4.5",
     "figlet": "^1.7.0",
     "got": "^14.4.1",
     "html-escaper": "^3.0.3",
+    "pdfmake": "^0.2.10",
     "pg": "^8.12.0",
     "pg-promise": "^11.8.0",
     "reflect-metadata": "^0.2.2",
@@ -73,6 +75,7 @@
     "@types/figlet": "^1.5.8",
     "@types/html-escaper": "^3.0.2",
     "@types/node": "^20.14.4",
+    "@types/pdfmake": "^0.2.9",
     "@vitest/ui": "^1.6.0",
     "eslint": "^9.5.0",
     "eslint-plugin-vitest": "^0.5.4",
