Update on readme & .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ NODE_OPTIONS="--loader ts-node/esm"
 POSTGRES_NAME=
 POSTGRES_PASSWORD=
 POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_DIALECT=
+POSTGRES_HOST='localhost'
+POSTGRES_DIALECT='postgres'
