--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "build": "rimraf ./dist && npx tsc ",
     "build:dev": "npx tsc -w",
-    "lovely": "yarn build && copyfiles -u 2 ./src/assets/*.*  ./dist/utils/images && node -r dotenv/config ./dist/index.js",
+    "lovely": "yarn build && copyfiles -u 2 ./src/assets/*.* ./dist/utils/images && yarn docs && node -r dotenv/config ./dist/index.js",
     "start": "node --loader ts-node/esm src/index.ts",
     "typeorm": "typeorm-ts-node-esm",
     "migration:create": "yarn typeorm migration:create ./src/database/migrations/${name}",
@@ -46,7 +46,8 @@
     "test": "vitest --clearScreen --ui",
     "coverage": "vitest run --coverage",
     "prepare": "husky",
-    "postinstall": "husky || true"
+    "postinstall": "husky || true",
+    "docs": "typedoc --entryPointStrategy expand ./ --tsconfig tsconfig.json"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown",
@@ -60,7 +61,6 @@
     "dotenv": "^16.4.5",
     "figlet": "^1.7.0",
     "got": "^14.4.1",
-    "html-escaper": "^3.0.3",
     "pdfmake": "^0.2.10",
     "pg": "^8.12.0",
     "pg-promise": "^11.8.0",
@@ -73,7 +73,6 @@
     "@tsconfig/node21": "^21.0.3",
     "@types/eslint__js": "^8.42.3",
     "@types/figlet": "^1.5.8",
-    "@types/html-escaper": "^3.0.2",
     "@types/node": "^20.14.4",
     "@types/pdfmake": "^0.2.9",
     "@vitest/ui": "^1.6.0",
@@ -86,6 +85,7 @@
     "prettier-eslint": "^16.3.0",
     "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
+    "typedoc": "^0.26.3",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1",
     "vitest": "^1.6.0"
